frontend/K8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-front-deployment
  labels:
    app: opsdesk-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: opsdesk-frontend
  template:
    metadata:
      labels:
        app: opsdesk-frontend
    spec:
      containers:
      - name: opsdesk-frontend
        image: avi03/051026frontend:v1
        ports:
        - containerPort: 8080
      resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
