frontend/K8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-front-service
spec:
  selector:
    app: opsdesk-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007
  type: NodePort
