frontend/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  # - host: foo.bar.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-front-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: my-back-service
            port:
              number: 80
